# command-line-chat-rust

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  user_data.txt
.github/workflows/: rust.yml
src/: account_modifications.rs  lib.rs  login.rs  main.rs  signup.rs  user_interface.rs
