[package]
name = "my-app"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
rpassword = "7.2"
colored="2"
serde="1.0.178"
serde_json="1.0.104"
serde_derive="1.0.179"
term_size="0.3.2"